manage spacing issue

--- a/src/app/components/oos-similar-section/oos-similar-section.component.scss
+++ b/src/app/components/oos-similar-section/oos-similar-section.component.scss
@@ -6,7 +6,7 @@
 //prod carsl
 .oosSimilarTopSection{
     h2{
-        padding:25px 0 15px
+        padding:17px 0 15px
     }
     .horizontal-scroll-container{
         display: flex;
